@@ -48,6 +48,7 @@ release 0.14.3
 	* added error handling for set_piece_hashes
 	* fixed missing include in enum_if.cpp
 	* fixed dual IP stack issue
+	* fixed issue where renamed files were sometimes not saved in resume data
 
 release 0.14.2
 
